--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
           <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 pt-5">
             <div class="col">
               <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" 
-                style="background-image: url('./images/volunteer-merch/greenish\ cap.jpg');">
+                style="background-image: url('./greenish\ cap.jpg');">
                 <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
                   <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Free cap</h3>
                 </div>
@@ -167,7 +167,7 @@
       
             <div class="col">
               <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" 
-                style="background-image: url('./images/refreshments/sandwiches.jpg');">
+                style="background-image: url('./sandwiches.jpg');">
                 <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
                   <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Refreshments</h3>
                 </div>
@@ -176,7 +176,7 @@
       
             <div class="col">
               <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" 
-                style="background-image: url('./images/kid\ holding\ a\ certificate.jpg');">
+                style="background-image: url('./kid\ holding\ a\ certificate.jpg');">
                 <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
                   <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Certificate of participation</h3>
                 </div>
